e2e/testdata/hydration/compiled/remote-base/tenant-a/networkpolicy_deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    config.kubernetes.io/origin: |
      path: ../kustomize-components/base/networkpolicy.yaml
  labels:
    test-case: hydration
  name: deny-all
  namespace: tenant-a
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels: null
